--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ body{padding-top:20px;}
 .carousel-indicators .active {
 background: #428bca;
 }
+
 .somoss{
   height: auto;
   width: 300px;
@@ -97,7 +98,16 @@ background: #428bca;
 }
 .somos{
   height: auto;
-  width: 70px;
+  width: 65px;
+}
+.ahorro{
+  height: 200px;
+  width: auto;
+}
+.fh5co-headingg h2 {
+    margin-bottom: 20px;
+    font-weight: 700;
+    color: #fa7129;
 }
 a {
   color: #fa7129;
@@ -109,6 +119,18 @@ a:hover, a:active, a:focus {
   color: #fa7129;
   outline: none;
 }
+[class^="icon-"], [class*=" icon-"] {
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    
+}
 
 p {
   margin-bottom: 30px;
@@ -119,6 +141,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-family: "Raleway", Arial, sans-serif;
   font-weight: 400;
   margin: 0 0 30px 0;
+      color: #092b8a;
 }
 
 ::-webkit-selection {
@@ -449,14 +472,20 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #fa7129;
   color: black;
 }
 
-.active {
+.activee {
   background-color: #fa7129;
   color: white;
 }
+.active {
+  background-color: white;
+  color: white;
+}
+
+
 
 .topnav .icon {
   display: none;
@@ -752,6 +781,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-heading h2 {
   margin-bottom: 20px;
   font-weight: 700;
+      color: #fa7129;
 }
 
 .googleplus-color {
@@ -899,6 +929,7 @@ h1, h2, h3, h4, h5, h6, figure {
   letter-spacing: 2px;
   font-size: 16px;
   font-weight: bold;
+  color:#fa7129;
 }
 #fh5co-footer [class*="col"] {
   padding-bottom: 30px;
